More Minor adjustments

--- a/tex/bci2000web.tex
+++ b/tex/bci2000web.tex
@@ -8,7 +8,7 @@
 
 \usepackage{soul}
 
-\linenumbers
+%\linenumbers
 
 
 \def\keyFont{\fontsize{8}{11}\helveticabold }
@@ -178,6 +178,8 @@ These paradigms typically specify a parameterization for \texttt{StimulusPresent
 The BCI2000Web system currently supports more than 20 possible experimental paradigms, including a task battery used for clinical assessment of functional localization.
 
 \subsubsection{Patients and Electrode Localization}
+
+All aspects of this study were carried out in accordance with the recommendations of the Johns Hopkins Institutional Review Board with written informed consent from all subjects. All subjects gave written informed consent in accordance with the Declaration of Helsinki. The protocol was approved by the Johns Hopkins Institutional Review Board.
 
 Before mapping, a post-operative computed tomography scan containing electrode locations is co-registered to a pre-operative magnetic resonance imaging scan of sufficient resolution (typically with voxel dimensions of 1 mm or less) to render the patient's cortical surface anatomy in high detail, using Freesurfer~\citep{fischl_freesurfer_2012} or Bioimage Suite~\citep{papademetris_bioimage_2006}.
 These electrode locations are overlaid on a 2D rendering of the cortical surface.
